# Pivot.AI

./: .gitignore  =6.0.0  DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt
.agent/rules/: architecture.md  development.md
.agent/workflows/: build-feature.md
.agents/workflows/: update-rust-learning.md
app/: auth.py  config.py  database.py  main.py  repository.py  telegram_utils.py
app/discovery/: duckduckgo.py  search.py  service.py
app/ingestion/: ashby.py  base.py  greenhouse.py  lever.py  scheduler.py  service.py
app/models/: admin_settings.py  company.py  insights.py  job.py  learning.py  pipeline.py  user.py
app/routers/: admin.py  discovery.py  goals.py  insights.py  jobs.py  learning.py  pipeline.py  profile.py  telegram.py
app/scoring/: company_engine.py  embeddings.py  engine.py  insights.py  llm.py  (+2 more)
milestones/: Milestone-1-Foundation-and-Ingestion.md  Milestone-2-Matching-and-Scoring.md  Milestone-3-Pipeline-and-AI-Reasoning.md  Milestone-4-Delivery-and-Insights.md  Milestone-5-Event-Driven-Architecture.md  Milestone-6-CLI-Agentic-MCP.md
pivot-ai-cli/: Cargo.toml
pivot-ai-cli/docs/: README.md  mcp-config.md  resources.md  sops.md
pivot-ai-cli/src/: main.rs  manager.rs  repl.rs
pivot-ai-cli/src/agent/: config.rs  groq.rs  mod.rs  ollama.rs
pivot-ai-cli/src/mcp/: client.rs  config.rs  hub.rs  mod.rs  transport.rs  types.rs
pivot_mcp/: main.py
plans/: AIFirstSystemPlan.md  CareerPipeline.md  ControlPlaneUI.md  Datasets.md  PivotAIVision.md
scripts/: bootstrap_admin.py  seed.py
web/: package-lock.json  package.json
(+21 files in other folders)
