[project]
name = "pivot-ai"
version = "0.1.0"
description = "AI-native career intelligence platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "motor>=3.6.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx",
]

[project.scripts]
pivot-mcp = "pivot_mcp.main:main"

[tool.setuptools.packages.find]
include = ["app*", "scripts*", "pivot_mcp*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
