[package]
name = "pivot-ai-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["full", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rich = "0.1" # placeholder for a future rich-text library if needed in Rust
rustyline = "15.0"
tokio-stream = "0.1.18"
home = "0.5.12"
colored = "3.1.1"
async-trait = "0.1.89"
chrono = "0.4.44"
